--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -188,22 +188,26 @@
          "x": [
           "jack",
           "jill",
-          "sandy"
+          "sandy",
+          "blaise"
          ],
          "y": [
           8,
           11,
-          10
+          8,
+          13,
+          6,
+          4
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"896cdab2-be94-47f0-b780-48b12ae62fb3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"896cdab2-be94-47f0-b780-48b12ae62fb3\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d91c30d1-b292-4b44-9c92-e8f21c898708\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d91c30d1-b292-4b44-9c92-e8f21c898708\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"896cdab2-be94-47f0-b780-48b12ae62fb3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"896cdab2-be94-47f0-b780-48b12ae62fb3\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d91c30d1-b292-4b44-9c92-e8f21c898708\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d91c30d1-b292-4b44-9c92-e8f21c898708\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -214,7 +218,7 @@
     "import plotly\n",
     "\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
-    "trace0 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy'], 'y': [8, 11, 10]}\n",
+    "trace0 \n",
     "\n",
     "\n",
     "plotly.offline.iplot([trace0])"
