automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,26 +188,22 @@
          "x": [
           "jack",
           "jill",
-          "sandy",
-          "blaise"
+          "sandy"
          ],
          "y": [
           8,
           11,
-          8,
-          13,
-          6,
-          4
+          10
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"d91c30d1-b292-4b44-9c92-e8f21c898708\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d91c30d1-b292-4b44-9c92-e8f21c898708\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"1692b0dd-6a0f-4893-9bbb-4dc4864d0243\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1692b0dd-6a0f-4893-9bbb-4dc4864d0243\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"d91c30d1-b292-4b44-9c92-e8f21c898708\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d91c30d1-b292-4b44-9c92-e8f21c898708\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"1692b0dd-6a0f-4893-9bbb-4dc4864d0243\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1692b0dd-6a0f-4893-9bbb-4dc4864d0243\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -218,7 +214,7 @@
     "import plotly\n",
     "\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
-    "trace0 \n",
+    "trace0 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy'], 'y': [8, 11, 10]}\n",
     "\n",
     "\n",
     "plotly.offline.iplot([trace0])"
